# UWB-TWR-Arudino

./: .gitmodules  anchor_trigger.ino
v3/: .gitignore  pyproject.toml
v3/ML/: README  collect_training_data.py  run_ai_tracker.py  train_model.py  training_data.csv  uwb_spellcasting_model.pkl
v3/ML/TwoWayRangingInitiator2/: TwoWayRangingInitiator2.ino
v3/ML/TwoWayRangingResponder2/: TwoWayRangingResponder2.ino
v3/ML_4A/: collect_training_data.py  run_ai_tracker.py  run_ai_tracker_4A.py  run_ai_tracker_4A_linear_nonlinear.py  train_model.py  train_model_xgboost_optuna.py  training_data_WIDER_4A_100sam.csv  training_data_WIDER_TWIST_4A_100sam.csv  uwb_random_forest_WIDER_TWIST_NEG_4A_100sam.pkl  uwb_xgboost_optuna_WIDER_4A_100sam.pkl  visualize.py
v3/ML_4A/DATA/: training_data_wide_4A.csv
v3/ML_4A/MODELS/: uwb_xgboost_optuna_2A.pkl  uwb_xgboost_optuna_4A.pkl
v3/ML_V2/: analyze_model.py  analyze_model1.py  circle_1.npy  circle_2.npy  circle_3.npy  collect_training_data.py  evaluate_model.py  evaluate_model1.py  fireball_1.npy  fireball_2.npy  fireball_3.npy  generate_heatmap.py  norm_stats.npy  populate_calc_z.py  run_ai_tracker_8A.py  template_maker_withAI.py  train_model.py  train_model_xgboost_optuna.py
v3/calibration/: calibration.ino  initiator.hpp  responder.hpp
v3/gesture_detection/: gesture_detection_withAI.py  imu_gesture_detection_withAI.py  network_comm_test.py  recompute_norm_stats.py  template_maker_withAI.py
v3/nlos/: cir_data.csv  initiator.hpp  responder.hpp
v3/sensor_fusion/: imu_run_ai_tracker_8A.py  imu_visualize.py
(+139 files in other folders)
